// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SyncRepoAlert with all props: {"errorMessage":"Sample error message.","loading":false,"initialRepoName":"sample-repo"} 1`] = `
"<zalert-stub type=\\"info\\" class=\\"border border-robin border-opacity-10\\">
  <div class=\\"flex items-baseline gap-x-2\\">
    <zicon-stub icon=\\"solid-alert-circle\\" color=\\"robin-400\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub>
    <div class=\\"space-y-3\\"><span class=\\"text-sm leading-7 text-robin-300\\">The repository you’re looking for might not have been synced with DeepSource. You can try
        syncing it manually.</span>
      <div class=\\"space-y-1\\">
        <div class=\\"flex flex-wrap gap-y-2 sm:flex-nowrap\\">
          <zinput-stub padding=\\"p-0 px-3\\" placeholder=\\"Enter the repository name\\" value=\\"sample-repo\\" class=\\"border border-ink-200 text-xs leading-5 sm:rounded-r-none sm:border-r-0\\"></zinput-stub> <button class=\\"flex w-full flex-shrink-0 items-center justify-center gap-x-1 rounded-sm border border-ink-200 bg-ink-300 px-6 py-3 text-xs leading-3 text-vanilla-100 sm:w-auto sm:rounded-l-none\\">
            <zicon-stub icon=\\"repositories\\" color=\\"vanilla-100\\" size=\\"x-small\\" class=\\"\\"></zicon-stub> <span>Sync repository</span>
          </button>
        </div> <span class=\\"text-xs leading-5 text-cherry-500\\">
          Sample error message.
        </span>
      </div>
    </div>
  </div>
</zalert-stub>"
`;

exports[`renders SyncRepoAlert with all props: {"errorMessage":"Sample error message.","loading":true,"initialRepoName":"sample-repo"} 1`] = `
"<zalert-stub type=\\"info\\" class=\\"border border-robin border-opacity-10\\">
  <div class=\\"flex items-baseline gap-x-2\\">
    <zicon-stub icon=\\"solid-alert-circle\\" color=\\"robin-400\\" size=\\"x-small\\" class=\\"flex-shrink-0\\"></zicon-stub>
    <div class=\\"space-y-3\\"><span class=\\"text-sm leading-7 text-robin-300\\">The repository you’re looking for might not have been synced with DeepSource. You can try
        syncing it manually.</span>
      <div class=\\"space-y-1\\">
        <div class=\\"flex flex-wrap gap-y-2 sm:flex-nowrap\\">
          <zinput-stub padding=\\"p-0 px-3\\" placeholder=\\"Enter the repository name\\" value=\\"sample-repo\\" class=\\"border border-ink-200 text-xs leading-5 sm:rounded-r-none sm:border-r-0\\"></zinput-stub> <button disabled=\\"disabled\\" class=\\"flex w-full flex-shrink-0 items-center justify-center gap-x-1 rounded-sm border border-ink-200 bg-ink-300 px-6 py-3 text-xs leading-3 text-vanilla-100 sm:w-auto sm:rounded-l-none cursor-not-allowed opacity-50\\">
            <zicon-stub icon=\\"spin-loader\\" color=\\"vanilla-100\\" size=\\"x-small\\" class=\\"animate-spin\\"></zicon-stub> <span>Sync repository</span>
          </button>
        </div> <span class=\\"text-xs leading-5 text-cherry-500\\">
          Sample error message.
        </span>
      </div>
    </div>
  </div>
</zalert-stub>"
`;
